# Copyrighted-Agent

./: .gitattributes  .gitignore  README.md  _test_read.py  cli.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  api_read_routes.py  async_submission.py  correction_api_routes.py  correction_page_routes.py  download_routes.py  file_transfer.py  job_retry_routes.py  main.py  ops_report.py  page_routes.py  routes.py  rule_routes.py  security.py  startup.py  static_routes.py  submission_support.py  upload_routes.py
app/core/: __init__.py
app/tools/: delivery_closeout.py  input_runner.py  metrics_baseline.py  minimax_bridge.py  provider_probe.py  provider_sandbox.py  release_gate.py  release_validation.py  runtime_backup.py  runtime_cleanup.py
app/web/: README.md  __init__.py  page_case.py  page_home.py  page_ops.py  page_report.py  page_review_rule.py  page_submission.py  pages.py  prompt_views.py  view_helpers.py  (+1 more)
config/: local.example.json  local.json  local.minimax_bridge.example.json  settings.py
docs/: ENCODING.md  LEGACY.md  PROJECT_STRUCTURE.md  test-strategy.md  web-roadmap.md
fastapi/: __init__.py  responses.py  testclient.py
prompts/: review_prompt.py  specifications.py
pytest/: __init__.py  __main__.py
scripts/: ensure_uv.ps1  restart_real_stack.ps1  run_real_validation.ps1  show_stack_status.ps1  start_mock_web.ps1  start_real_bridge.ps1  start_real_web.ps1  start_uv_web.ps1
src/: cli.py  pdf_extractor.py  reviewer.py  word_to_pdf.py
tests/: README.md  conftest.py
(+421 files in other folders)
