[project]
name = "copyrighted-agent"
version = "0.1.0"
description = "Local software copyright material intake, review, desensitization, and reporting agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "pymupdf>=1.23.0",
    "regex>=2023.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false
